@@ -32,3 +32,4 @@ reporting bugs, providing fixes, suggesting useful features or other:
 	Oleander Reis <https://github.com/oleeander>
 	Michael Johansen <https://github.com/mijohansen>
 	Joshua Erney <https://github.com/JoshTheGoldfish>
+	Andrei Bastun <https://github.com/vershnik>
